--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,9 @@
         "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
-        "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan": "^1.9",
-        "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^9.5",
         "spatie/ignition": "^1.4",
-        "squizlabs/php_codesniffer": "^3.7",
-        "symfony/var-dumper": "^6.2",
-        "vimeo/psalm": "^5.4"
+        "symfony/var-dumper": "^6.2"
     },
     "autoload": {
         "psr-4": {
@@ -52,10 +47,7 @@
     },
     "config": {
         "optimize-autoloader": true,
-        "sort-packages": true,
-        "allow-plugins": {
-            "phpstan/extension-installer": true
-        }
+        "sort-packages": true
     },
     "scripts": {
         "analyse": [
