--- a/composer.json
+++ b/composer.json
@@ -50,23 +50,13 @@
         "sort-packages": true
     },
     "scripts": {
-        "analyse": [
-            "@analyse:phpstan",
-            "@analyse:psalm"
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@php -S localhost:0 -t public"
         ],
-        "analyse:phpstan": "./vendor/bin/phpstan analyse --memory-limit 1G",
-        "analyse:psalm": "./vendor/bin/psalm",
-        "lint:fix": "./vendor/bin/phpcbf; if [ $? -eq 1 ]; then exit 0; fi",
-        "lint:style": "./vendor/bin/phpcs",
-        "serve": "@php -S localhost:0 -t public",
         "test": "./vendor/bin/phpunit --testdox"
     },
     "scripts-descriptions": {
-        "analyse": "Runs all static analysis checks.",
-        "analyse:phpstan": "Runs the PHPStan static analyser.",
-        "analyse:psalm": "Runs the Psalm static analyser.",
-        "lint:fix": "Auto-fixes coding standards issues, if possible.",
-        "lint:style": "Checks for coding standards issues.",
         "serve": "Starts PHP development web server on a random (unused) port.",
         "test": "Runs unit tests."
     }
