--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "slim/twig-view": "^3.3",
         "symfony/translation": "^6.2",
         "symfony/twig-bridge": "^6.2",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "ext-mysqli": "*",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
