--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,17 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
+        "ext-mysqli": "*",
+        "ext-pdo": "*",
+        "doctrine/orm": "^2.14",
         "php-di/php-di": "^7.0",
         "slim/psr7": "^1.6",
         "slim/slim": "^4.11",
         "slim/twig-view": "^3.3",
+        "symfony/cache": "^6.2",
         "symfony/translation": "^6.2",
         "symfony/twig-bridge": "^6.2",
-        "vlucas/phpdotenv": "^5.5",
-        "ext-mysqli": "*",
-        "ext-pdo": "*"
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
