--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,9 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get install -y mariadb-client \ 
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
+# Add execute permissions to doctrine console
+RUN chmod +x doctrine
+
 # Install php-mysql driver
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 
